[package]
name = "ambi"
version = "0.1.0"
authors = ["Archina Void <archina5thrider@gmail.com>"]
edition = "2018"

[[bin]]
name = "ambi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "performance"
harness = false

[profile.dev]
opt-level = 3

[dependencies]
seq_io = "0.3.1"
colored="*"
dialoguer="*"
primes="*"
indexmap="*"
hashbrown="*"

[[example]]
name = "test"
path = "examples/test.rs"